# DeciML

./: .gitignore  README.md
src/: .merlin  Makefile  dune  expr.ml  exprLexer.ml  exprParser.mly  exprParserMessages  exprParserMessages.default  exprParserMessages.ml  exprParserMessages.new  exprParserMessages.raw  main  main.ml  oldtests.mlold  parsing.ml  stack.dml  syntaxrole.ml  testcons  testeval  testlazy  testmessages  testnotation  testparser  unimath.symbols  unique.ml  utils.ml  value.ml
src/lib/: fixpoints.dml  lib.dml  list.dml  notation.dml
src/tests/: ch.dml  channels.dml  cont.dml  coroutines.dml  lib.dml  oldpar  precsp.dml  testbyname  testbyname.dml  testcons  testconsprint  testeval  testlazy  testlazy.dml  testmessages  testnotation  testparser  testquant
