(executable
 (name main)
 (libraries core unix menhirLib sedlex ppxlib ppx_deriving)
 (preprocess (pps sedlex.ppx ppx_deriving.std))

 ;;;(preprocess (pps ppx_jane ppx_sexp_conv sedlex.ppx ppx_base ppx_deriving.std))
)
 
(menhir (flags --table --canonical --explain) (modules exprParser))

 (env (dev (flags (:standard -warn-error -A))))

